Tue Jan 20 14:33:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/archiving/server/TestRetriever_i.h:
        * cuts/utils/archiving/server/TestRetriever_i.inl:
        * cuts/utils/archiving/server/TestRetriever_i.cpp:

          . Added missing files.

Tue Jan 20 14:28:42 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Property_Parser.h:

          . Bug fix where the grammar was defined after the parser. This
            did not compile on non-Windows systems.

Tue Jan 20 10:39:36 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.cpp:

          . Added support for setting the name of the test database used
            for collecting results.

          . The default location of the database is now the working
            directory instead of $CUTS_ROOT/etc/tests

        * etc/tests:

          Removed this file.

Tue Jan 20 06:30:13 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Command_Substitution.h:
        * cuts/utils/Command_Substitution.cpp:
        * cuts/utils/Property_Expander.h:
        * cuts/utils/Property_Expander.cpp:
        * cuts/utils/Property_Parser.h:
        * cuts/utils/Text_Processor.h:
        * cuts/utils/template/Template_Config_List_Parser.h:

          . Bug fix where temporary files remained after the application
            exited.

          . Make the return values of the parsers consistent.

Tue Jan 20 06:03:28 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Property_Parser.h:
        * cuts/utils/Property_Parser.cpp:

          . Bug fix where the property parser was not handling certain
            cases correctly.

          . Remove the requirement of ending a property list with a
            semi-colon.

        * cuts/utils/Command_Substitution.h:
        * cuts/utils/Command_Substitution.cpp:
