@@ -1,3 +1,9 @@
+Tue Jan 20 14:41:54 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/archiving/server/TestArchiveBrowser_i.cpp:
+
+	  . Fixed compilation errors on non-Windows systems.
+
 Tue Jan 20 14:33:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/archiving/server/TestRetriever_i.h:
